# gpuhammer

./: CMakeLists.txt  README.md  env_purge.sh  env_setup.sh  plot_all_figures.sh  plot_delay.py  run_all.sh  run_artifact.sh  run_fig10.sh  run_fig11.sh  run_fig12.sh  run_fig12_t4.sh  run_fig13_t4.sh  run_fig14.sh  run_fig15.sh  run_fig16.sh  run_fig2.sh  run_fig5_6.sh  run_fig8.sh  run_row_sets.sh  run_setup.sh  run_t1_t3.sh
data_scripts/fig10/: run_delay_12w.sh  run_delay_16w.sh  run_delay_24w.sh  run_delay_6w_2t.sh  run_delay_8w.sh  run_delay_8w_2t.sh  run_delay_8w_3t.sh
data_scripts/fig12_t4/: run_hammer_manual_B1.sh  run_hammer_manual_B2.sh  run_hammer_manual_D1.sh  run_hammer_manual_D3.sh
data_scripts/fig13_t4/: run_hammer_manual_B1.sh  run_hammer_manual_B2.sh  run_hammer_manual_D1.sh  run_hammer_manual_D3.sh
data_scripts/fig2/: execute_fig2.sh
data_scripts/fig5_6/: execute_fig5_6.sh
data_scripts/fig8/: run_delay_mt.sh  run_delay_mw.sh  run_delay_st.sh
exploit/: allocator.cu  hammer_manual_agg_left.cu  hammer_manual_agg_right.cu  sample_table_vis.txt
exploit/B1/sample_data/: alexnet.txt  dense.txt
exploit/B2/: run_hammer_manual_B2.sh
exploit/B2/sample_data/: dense.txt  inception.txt  resnet.txt  vgg.txt
exploit/D1/: run_hammer_manual_D1.sh
exploit/D1/sample_data/: vgg.txt
exploit/D3/: run_hammer_manual_D3.sh
exploit/D3/sample_data/: alexnet.txt
hammer/: simple_hammer.cu
include/: hammer_kernels.cuh  hammer_util.cuh
plot_scripts/: plot_fig10a.py  plot_fig10b.py  plot_fig11.py  plot_fig12.py  plot_fig13.py  plot_fig14.py  plot_fig15.py  plot_fig16.py  plot_fig2.py  plot_fig5a.py  plot_fig5b.py  plot_fig6.py  plot_fig8.py  plot_t1_t3.py  plot_t2_t3.py  plot_t4.sh
results/delay/: delays.txt
results/sample/: t1.txt  t3.txt  t4.txt
row_buffer_conflict_exp/: rbce_conf_set_main.cu  rbce_gen_time_main.cu
src/: CMakeLists.txt  README.md  plot_delay.py  run_delay.sh  run_exploit.sh  run_hammer.sh  run_imagenet_models.py  run_timing_task.py
src/exploit/: hammer_manual_agg_left.cu  hammer_manual_agg_right.cu  hammer_mem_manage.cu  sample_table.csv
src/exploit/B1/: run_hammer_manual_B1.sh
src/exploit/B1/sample_data/: inception.txt  resnet.txt  vgg.txt
src/exploit/B2/sample_data/: alexnet.txt
src/exploit/D1/sample_data/: alexnet.txt  dense.txt  inception.txt  resnet.txt
src/exploit/D3/sample_data/: dense.txt  inception.txt  resnet.txt  vgg.txt
src/hammer/: gpu_hammer.cu  simple_hammer.cu  synchronization.cu  synchronization_multi_thread.cu  synchronization_single_thread.cu  trh.cu  trr_sampler_size.cu
src/include/: cuda_helpers.cu  cuda_helpers.cuh  hammer_kernels.cu  hammer_kernels.cuh  hammer_util.cu  hammer_util.cuh  rh_impls.cu  rh_impls.cuh  rh_kernels.cu  rh_kernels.cuh  rh_utils.cu  rh_utils.cuh  utils.cu  utils.cuh
src/re_gddr/: bank_set_main.cu  conf_set_main.cu  drama_conflict_prober.cu  gen_time_main.cu  gen_time_same_main.cu  get_banks_main.cu  load_modifiers_main.cu  row_set_main.cu
src/row_buffer_conflict_exp/: rbce_conf_set_main.cu  rbce_gen_time_main.cu  rbce_gen_time_same.cu  rbce_get_banks_main.cu  rbce_load_main.cu  rbce_n_conflict_exp.cu  rbce_n_conflict_exp.cuh  rbce_row_set_main.cu
util/: env_setup.sh  init_cuda.sh  run_delay.sh  run_hammer.sh  run_known_flips.sh  run_timing_task.py
